<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".DetalleActivity">

    <ImageView
        android:id="@+id/ivPokeball"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pokeballdos" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/fondo_blanco_curvo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tvTipoPokemon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:background="@color/purple"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="@string/tipo1"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tvTipoPokemon2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTipoPokemon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="116dp"
            android:background="@color/dark_blue"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="@string/tipo2"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTipoPokemon1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="184dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/altura"
            android:textColor="@color/red"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/peso"
            android:textColor="@color/red"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAltura" />

        <TextView
            android:id="@+id/tvHabilidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="66dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/habilidad"
            android:textColor="@color/red"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHabilidadConcreta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/habilidadGengar"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHabilidad" />

        <TextView
            android:id="@+id/tvAlturaPokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="112dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/alturaP"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tvHabilidad"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toEndOf="@+id/tvAltura"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPesoP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/pesoP"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tvPeso"
            app:layout_constraintTop_toBottomOf="@+id/tvAlturaPokemon" />

        <TextView
            android:id="@+id/tvdescPokemon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="292dp"
            android:layout_marginEnd="32dp"
            android:text="@string/descG"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/ivMewPA"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineMid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvdescPokemon"
            app:srcCompat="@drawable/mewPA" />

        <ImageView
            android:id="@+id/ivFlechaIzq"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/flechaIzquierda" />

        <TextView
            android:id="@+id/tvMewNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/mewNum"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/ivMewPA"
            app:layout_constraintStart_toStartOf="@+id/ivMewPA"
            app:layout_constraintTop_toBottomOf="@+id/ivMewPA" />

        <ImageView
            android:id="@+id/ivJigglyPA"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guidelineMid"
            app:layout_constraintTop_toBottomOf="@+id/tvdescPokemon"
            app:srcCompat="@drawable/jigglypuffPA" />

        <TextView
            android:id="@+id/tvJigglyNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/jigglyNum"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/ivJigglyPA"
            app:layout_constraintStart_toStartOf="@+id/ivJigglyPA"
            app:layout_constraintTop_toBottomOf="@+id/ivJigglyPA" />

        <ImageView
            android:id="@+id/ivFlechaDer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/flechaDerecha" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvNombrePokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/gengar"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivEstrella"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toEndOf="@+id/tvNombrePokemon"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/estrella" />

    <TextView
        android:id="@+id/tvNumPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="3dp"
        android:text="@string/numPokemonGengar"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombrePokemon" />

    <ImageView
        android:id="@+id/ivGengar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="76dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gengar" />


</androidx.constraintlayout.widget.ConstraintLayout>